--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,10 @@
 # SQLite version 3.x
 #   gem install sqlite3
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: jdbcmysql
+  database: demo
+  username: root
+  password:
   pool: 5
   timeout: 5000
 
